--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,5 @@ env: prd
 spring:
   main:
     allow-circular-references: true
+
+spring.resources.static-locations: classpath:/resources/,classpath:/static/,classpath:/templates/
